<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="50dp">

    <ImageView
        android:id="@+id/iv_no_reply"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/faq_ic_no_reply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_no_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/faq_sofa_reply"
        android:textColor="#ff9596a4"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_reply"/>

    <com.healthy.library.widget.DrawableTextView
        android:id="@+id/tv_reply"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_reply"
        android:drawableStart="@drawable/faq_ic_reply"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/faq_reply_me"
        android:textColor="#ffffffff"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_reply"/>
</androidx.constraintlayout.widget.ConstraintLayout>