<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/layout_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smart.refresh.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.healthy.library.widget.StatusLayout
            android:id="@+id/layout_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:status_init="content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.healthy.library.widget.StatusLayout>

        <com.scwang.smart.refresh.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <View
            android:id="@+id/view_bottom"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/shape_faq_bottom_bg"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/faq_prefix_ask"
            android:textColor="#ffffffff"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/view_bottom"
            app:layout_constraintStart_toStartOf="@id/view_bottom"
            app:layout_constraintTop_toTopOf="@id/view_bottom"/>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="1px"
            android:layout_marginEnd="1px"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_faq_close_q"
            app:layout_constraintEnd_toEndOf="@id/view_bottom"
            app:layout_constraintTop_toTopOf="@id/view_bottom"/>

        <TextView
            android:id="@+id/tv_ask_expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/shape_ask_expert"
            android:paddingStart="13dp"
            android:paddingTop="6dp"
            android:paddingEnd="13dp"
            android:paddingBottom="6dp"
            android:text="@string/faq_ask_expert"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/view_bottom"
            app:layout_constraintEnd_toStartOf="@id/iv_close"
            app:layout_constraintTop_toTopOf="@id/view_bottom"/>

        <TextView
            android:id="@+id/tv_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_reward"
            android:paddingStart="13dp"
            android:paddingTop="6dp"
            android:paddingEnd="13dp"
            android:paddingBottom="6dp"
            android:text="@string/faq_reward"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/view_bottom"
            app:layout_constraintEnd_toStartOf="@id/tv_ask_expert"
            app:layout_constraintTop_toTopOf="@id/view_bottom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>


