<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="42dp"
        android:text="@string/faq_improve_reward_title"
        android:textColor="#ff222222"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textStyle="bold"
        android:text="@string/faq_money_char"
        android:textColor="#ff222222"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <EditText
        android:id="@+id/et_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:fontFamily="@font/din_medium"
        android:inputType="numberDecimal"
        android:paddingStart="17dp"
        android:paddingEnd="0dp"
        android:textColor="#ff000000"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_char"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_char"
        app:layout_constraintTop_toTopOf="@id/tv_char"
        tools:ignore="Autofill,LabelFor"
        tools:text="10"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="43dp"
        android:background="#D8D8D8"
        app:layout_constraintTop_toBottomOf="@id/et_price"/>

    <TextView
        android:id="@+id/tv_improve"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_release"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingStart="46dp"
        android:paddingEnd="46dp"
        android:text="@string/faq_tv_pay_immediately"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@id/tv_improve"/>
</androidx.constraintlayout.widget.ConstraintLayout>